# MAVSDK

examples/: CMakeLists.txt
examples/mission_speed/: CMakeLists.txt  mission_speed.cpp
src/mavsdk/core/: CMakeLists.txt  mavlink_ftp_client.cpp  mavlink_ftp_client.h  mavlink_ftp_server.cpp  mavlink_ftp_server.h  mavsdk_impl.cpp  server_component_impl.cpp  server_component_impl.h  system_impl.cpp  system_impl.h
src/mavsdk/plugins/camera/: camera_impl.cpp  camera_impl.h
src/mavsdk/plugins/component_information/: component_information_impl.cpp
src/mavsdk/plugins/ftp/: ftp_impl.cpp  ftp_impl.h
src/mavsdk/plugins/ftp_server/: ftp_server.cpp  ftp_server_impl.cpp  ftp_server_impl.h
src/mavsdk/plugins/ftp_server/include/plugins/ftp_server/: ftp_server.h
src/mavsdk_server/src/plugins/ftp_server/: ftp_server_service_impl.h
src/system_tests/: CMakeLists.txt  fs_helpers.cpp  fs_helpers.h  ftp_download_file.cpp  ftp_upload_file.cpp
